// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeNaN should return false for  (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be NaN.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for [] (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be NaN.
    got: array
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for 1 (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be NaN.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for NaN (isNot true) 1`] = `
Object {
  "message": "    
    expected should be NaN.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for Symbol() (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be NaN.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for false (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be NaN.
    got: boolean
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for true (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be NaN.
    got: boolean
",
  "pass": false,
}
`;
